# ipu6-camera-bins

./: .gitattributes  LICENSE  README.md
.github/workflows/: dfsg-ize.yml
include/ia_camera/: gcss_utils.h  ipu_process_group_wrapper.h
include/ia_cipf_css/: ia_cipf_css.h
include/ia_imaging/: CCAMacro.h  CCAStorage.h  IIPUAic.h  IntelCCA.h  IntelCCATypes.h  ia_abstraction.h  (+27 more)
lib/: libgcss-ipu6.so.0  libgcss-ipu6.so.0.0.0  libgcss-ipu6ep.so.0  libgcss-ipu6ep.so.0.0.0  libgcss-ipu6epmtl.so.0  libgcss-ipu6epmtl.so.0.0.0  libgcss.so.0  libgcss.so.0.0.0  libia_aiq-ipu6.so.0  libia_aiq-ipu6ep.so.0  libia_aiq-ipu6epmtl.so.0  libia_aiq_file_debug-ipu6.so.0  libia_aiq_file_debug-ipu6ep.so.0  libia_aiq_file_debug-ipu6epmtl.so.0  libia_aiqb_parser-ipu6.so.0  libia_aiqb_parser-ipu6ep.so.0  libia_aiqb_parser-ipu6epmtl.so.0  libia_bcomp-ipu6.so.0  libia_bcomp-ipu6ep.so.0  libia_bcomp-ipu6epmtl.so.0  libia_camera.so.0  libia_cca-ipu6.so.0  libia_cca-ipu6ep.so.0  libia_cca-ipu6epmtl.so.0  libia_ccat-ipu6.so.0  libia_ccat-ipu6ep.so.0  libia_ccat-ipu6epmtl.so.0  libia_cipf.so.0  libia_cipf.so.0.0.0  libia_cmc_parser-ipu6.so.0  libia_cmc_parser-ipu6ep.so.0  libia_cmc_parser-ipu6epmtl.so.0  libia_coordinate-ipu6.so.0  libia_coordinate-ipu6ep.so.0  libia_coordinate-ipu6epmtl.so.0  libia_dvs-ipu6.so.0  libia_dvs-ipu6ep.so.0  libia_dvs-ipu6epmtl.so.0  libia_emd_decoder-ipu6.so.0  libia_emd_decoder-ipu6ep.so.0  (+22 more)
scripts/: dfsg-ize
tools/intel-ipu-fw-info/: .gitignore  README.md  pyproject.toml
tools/intel-ipu-fw-info/intel_ipu_fw_info/: __init__.py  cli.py  key.py  parser.py  spec.py
(+861 files in other folders)
